[package]
name = "day003-traffic-light"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "day003-traffic-light"
test = false

[lib]
name = "day003_traffic_light"
path = "src/lib.rs"
test = true

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "arch-cortex-m",
    "executor-thread",
], optional = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy", optional = true }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = [
    "time-driver",
    "rp235xa",
    "critical-section-impl",
    "imagedef-secure-exe",
], optional = true }
cortex-m = { version = "0.7.7", optional = true }
cortex-m-rt = { version = "0.7.3", optional = true }
panic-halt = { version = "1.0.0", optional = true }

[features]
default = [
    "embassy-executor",
    "embassy-time",
    "embassy-rp",
    "cortex-m",
    "cortex-m-rt",
    "panic-halt",
]

[profile.dev]
panic = "abort"

[profile.release]
debug = true
lto = true
opt-level = "z"
panic = "abort"
